<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.abdulaziz.egytronica.ui.splash.Splash">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_logo"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/landing_intro_desc_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/landing_intro_desc_text"
                    android:textSize="@dimen/title_1_f"/>

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.4">

        <TextView
            android:id="@+id/landing_intro_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/landing_intro_text"
            android:textSize="@dimen/label_s_reg_f"
            android:textStyle="normal"
            android:textColor="@color/gray_t"/>

        <Button
            android:id="@+id/landing_signup_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/sign_up_button_selector"
            android:clickable="true"
            android:text="@string/landing_sign_up_button"
            android:textSize="18dp"
            android:textStyle="normal"
            android:textColor="@color/green_t"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/landing_login_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/sign_up_button_selector"
            android:clickable="true"
            android:text="@string/landing_have_account_button"
            android:textSize="18dp"
            android:textStyle="normal"
            android:textColor="@color/green_t"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/landing_skip_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/landing_skip"
            android:textSize="@dimen/label_s_reg_f"
            android:textStyle="normal"
            android:textColor="@color/green_t"/>

    </LinearLayout>

</LinearLayout>
