<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.abdulaziz.egytronica.ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="0dip"
        android:layout_marginBottom="5dip"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/login_activity_logo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_iv_bottom_margin"
            android:src="@drawable/img_board"/>

        <TextView
            android:id="@+id/login_activity_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_desc"
            android:textSize="@dimen/label_s_reg_f"
            android:textColor="@color/gray_t"/>

        <com.abdulaziz.egytronica.utils.textInputComponent.CustomTextInputLayout
            android:id="@+id/login_activity_email_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/generic_ed_side_margin"
            android:layout_marginRight="@dimen/generic_ed_side_margin"
            android:layout_marginBottom="@dimen/generic_ed_bottom_margin"
            android:layout_marginTop="@dimen/generic_ed_bottom_margin">
            <com.abdulaziz.egytronica.utils.textInputComponent.CustomTextInputEditText
                android:id="@+id/login_activity_email_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/label_l_med_f"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"/>
        </com.abdulaziz.egytronica.utils.textInputComponent.CustomTextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_activity_password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/generic_ed_side_margin"
            android:layout_marginRight="@dimen/generic_ed_side_margin"
            android:layout_marginBottom="@dimen/generic_ed_bottom_margin">
            <com.abdulaziz.egytronica.utils.textInputComponent.CustomTextInputEditText
                android:id="@+id/login_activity_password_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/label_l_med_f"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="2">

        <Button
            android:id="@+id/login_activity_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/generic_btn_height"
            android:minWidth="@dimen/generic_btn_width"
            android:maxWidth="@dimen/generic_btn_width"
            android:background="@drawable/sign_up_button_selector"
            android:text="@string/login_login_btn"
            android:textSize="@dimen/label_l_reg_f"
            android:textColor="@color/green_1"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>
