<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.abdulaziz.egytronica.ui.board.create.CreateBoardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="5dip"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/create_board_activity_person_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/on_boarding_iv_bottom_margin"
            android:src="@drawable/img_profile"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/create_board_activity_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/generic_ed_side_margin"
            android:layout_marginRight="@dimen/generic_ed_side_margin"
            android:layout_marginBottom="@dimen/generic_ed_bottom_margin">
            <com.abdulaziz.egytronica.utils.textInputComponent.CustomTextInputEditText
                android:id="@+id/create_board_activity_name_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/label_l_med_f"
                android:hint="@string/create_board_name_ed"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/create_board_activity_code_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/generic_ed_side_margin"
            android:layout_marginRight="@dimen/generic_ed_side_margin"
            android:layout_marginBottom="@dimen/generic_ed_bottom_margin">
            <com.abdulaziz.egytronica.utils.textInputComponent.CustomTextInputEditText
                android:id="@+id/create_board_activity_code_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/label_l_med_f"
                android:hint="@string/create_board_code_ed"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/create_board_activity_refresh_time_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/generic_ed_side_margin"
            android:layout_marginRight="@dimen/generic_ed_side_margin"
            android:layout_marginBottom="@dimen/generic_ed_bottom_margin">
            <com.abdulaziz.egytronica.utils.textInputComponent.CustomTextInputEditText
                android:id="@+id/create_board_activity_refresh_time_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/label_l_med_f"
                android:hint="@string/create_board_refresh_time_ed"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/create_board_activity_last_maintenance_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/generic_ed_side_margin"
            android:layout_marginRight="@dimen/generic_ed_side_margin"
            android:layout_marginBottom="@dimen/generic_ed_bottom_margin">
            <com.abdulaziz.egytronica.utils.textInputComponent.CustomTextInputEditText
                android:id="@+id/create_board_activity_last_maintenance_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/label_l_med_f"
                android:hint="@string/create_board_last_maintenance_ed"
                android:inputType="date"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="7">
        <Button
            android:id="@+id/create_board_activity_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/generic_btn_height"
            android:minWidth="@dimen/generic_btn_width"
            android:maxWidth="@dimen/generic_btn_width"
            android:background="@drawable/sign_up_button_selector"
            android:text="@string/on_boarding_btn"
            android:textSize="@dimen/label_s_reg_f"
            android:textColor="@color/green_1"
            android:textAllCaps="false"/>
    </LinearLayout>


</LinearLayout>
