<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/members_dialog_layout_margin"
        android:layout_marginTop="@dimen/members_dialog_layout_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/components_dialog_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/members_dialog_tv_side_margin"
            android:layout_marginRight="@dimen/members_dialog_tv_side_margin">
            <com.abdulaziz.egytronica.utils.textInputComponent.CustomTextInputEditText
                android:id="@+id/components_dialog_name_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/label_l_med_f"
                android:hint="@string/components_dialog_email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/components_dialog_nodes_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/members_dialog_tv_side_margin"
            android:layout_marginRight="@dimen/members_dialog_tv_side_margin">
            <com.abdulaziz.egytronica.utils.textInputComponent.CustomTextInputEditText
                android:id="@+id/components_dialog_nodes_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/label_l_med_f"
                android:hint="@string/components_dialog_nodes"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/components_dialog_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_marginLeft="@dimen/members_dialog_tv_side_margin"
            android:layout_marginRight="@dimen/members_dialog_tv_side_margin"></Spinner>

        <Button
            android:id="@+id/components_dialog_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/generic_btn_height"
            android:minWidth="@dimen/generic_btn_width"
            android:maxWidth="@dimen/generic_btn_width"
            android:layout_marginTop="@dimen/generic_btn_top_margin"
            android:layout_marginLeft="@dimen/generic_btn_side_margin"
            android:layout_marginRight="@dimen/generic_btn_side_margin"
            android:text="@string/components_dialog_btn"
            android:textColor="@color/green_2"
            android:textSize="@dimen/label_l_med_f"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:background="@drawable/sign_up_button_selector"/>
    </LinearLayout>



</LinearLayout>