<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:pin="http://schemas.android.com/apk/res-auto"
    tools:context="com.abdulaziz.egytronica.ui.mobile_pin.MobilePinActivity"
    android:orientation="vertical"
    android:background="@color/background"
    android:id="@id/main_view"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/mobile_pin_message_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mobile_pin_iv_top_margin"
        android:src="@drawable/img_message"/>

    <TextView
        android:id="@+id/mobile_pin_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mobile_pin_desc_tv_top_margin"
        android:layout_marginBottom="@dimen/mobile_pin_desc_tv_bottom_margin"
        android:gravity="center"
        android:text="@string/mobile_pin_desc"
        android:textColor="@color/blue_t"
        android:textSize="@dimen/label_s_reg_f"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="top"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"/>

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/mobile_pin_pinView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="5"
            android:textIsSelectable="false"
            android:textSize="@dimen/title_1_f"
            android:textColor="@color/green_1"
            android:imeOptions="actionDone"
            pin:pinCharacterMask="*"
            pin:pinAnimationType="popIn"
            pin:pinCharacterSpacing="10dip"
            pin:pinTextBottomPadding="5dip"
            pin:pinLineStroke="2dip"
            pin:pinLineStrokeSelected="2dip"
            pin:pinBackgroundIsSquare="false" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/mobile_pin_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/generic_btn_height"
            android:minWidth="@dimen/generic_btn_width"
            android:maxWidth="@dimen/generic_btn_width"
            android:background="@drawable/sign_up_button_selector"
            android:text="@string/mobile_pin_btn"
            android:textSize="@dimen/label_s_reg_f"
            android:textColor="@color/green_1"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/mobile_pin_resend_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mobile_pin_click_tv_top_margin"
            android:padding="@dimen/mobile_pin_click_tv_padding"
            android:text="@string/mobile_pin_resend"
            android:textSize="@dimen/label_s_reg_f"
            android:textColor="@color/green_1"/>

    </LinearLayout>


</LinearLayout>